# django-pgconstraints

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/guide/check-constraint-trigger/: index.html
0.1.0/guide/generated-field-trigger/: index.html
0.1.0/guide/unique-constraint-trigger/: index.html
0.1.0/guide/validation/: index.html
0.1.0/reference/changelog/: index.html
0.1.0/search/: search_index.json
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a1/getting-started/installation/: index.html
0.1.0a1/reference/changelog/: index.html
0.1.0a1/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/guide/check-constraint-trigger/: index.html
0.2.0/guide/generated-field-trigger/: index.html
0.2.0/guide/unique-constraint-trigger/: index.html
0.2.0/guide/validation/: index.html
0.2.0/reference/changelog/: index.html
django_pgconstraints/: __init__.py  admin.py  apps.py  constraints.py  cycles.py  refresh.py  returning.py  sql.py  triggers.py  validation.py
django_pgconstraints/management/commands/: refresh_computed_field.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: check-constraint-trigger.md  generated-field-trigger.md  unique-constraint-trigger.md  validation.md
docs/reference/: changelog.md
docs/superpowers/plans/: 2026-04-11-pgtrigger-refactor.md
examples/full/: README.md  pyproject.toml
examples/full/config/: settings.py
examples/full/shop/: models.py
examples/simple/: README.md  pyproject.toml
examples/simple/config/: settings.py
examples/simple/content/: models.py
main/: 404.html  index.html  sitemap.xml
main/getting-started/installation/: index.html
main/getting-started/quickstart/: index.html
main/guide/check-constraint-trigger/: index.html
main/guide/generated-field-trigger/: index.html
main/guide/unique-constraint-trigger/: index.html
main/guide/validation/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
main/superpowers/plans/2026-04-11-pgtrigger-refactor/: index.html
tests/: _trigger_helpers.py  conftest.py  helpers.py  test_admin_mixin.py  test_aggregate_trigger.py  test_allowed_transitions.py  test_auto_refresh.py  test_check_comprehensive.py  test_check_constraint_trigger.py  test_checks.py  test_cross_table_unique.py  test_cycles.py  test_generated_field.py  test_generated_field_trigger.py  test_helpers.py  test_immutable.py  test_maintained_count.py  test_refresh_command.py  test_refresh_dependent.py  test_statement_level_cascade.py  test_unique_comprehensive.py  test_unique_constraint_trigger.py  test_unique_index_backing.py
tests/settings/: base.py
tests/testapp/: factories.py  models.py
